--- a/machine_learning/capstone_trial_decisionforest.ipynb
+++ b/machine_learning/capstone_trial_decisionforest.ipynb
@@ -11,11 +11,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 76,
+      "execution_count": 1,
       "metadata": {
         "id": "huL9Ptirgdz0"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "/var/folders/j9/j6p747vj52j4bx0m5hm_3w140000gn/T/ipykernel_10544/1802857842.py:2: DeprecationWarning: \n",
+            "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
+            "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
+            "but was not found to be installed on your system.\n",
+            "If this would cause problems for you,\n",
+            "please provide us feedback at https://github.com/pandas-dev/pandas/issues/54466\n",
+            "        \n",
+            "  import pandas as pd\n"
+          ]
+        }
+      ],
       "source": [
         "import numpy as np\n",
         "import pandas as pd\n",
@@ -30,15 +45,7 @@
         "from sklearn.preprocessing import label_binarize, StandardScaler\n",
         "from sklearn.metrics import accuracy_score, auc, classification_report, confusion_matrix, roc_curve\n",
         "# from sklearn.model_selection import cross_val_score, StratifiedKFold\n",
-        "from sklearn.utils import shuffle\n",
-        "\n",
-        "# from keras.utils import to_categorical\n",
-        "# from keras.models import Sequential\n",
-        "# from keras.layers import Dense, Dropout, BatchNormalization, LeakyReLU\n",
-        "# from tensorflow.keras.callbacks import EarlyStopping\n",
-        "# from tensorflow.keras.optimizers import Adam, SGD, RMSprop\n",
-        "# from tensorflow.keras.regularizers import l1, l2\n",
-        "# from scikeras.wrappers import KerasClassifier"
+        "from sklearn.utils import shuffle"
       ]
     },
     {
@@ -52,7 +59,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 77,
+      "execution_count": 9,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -62,7 +69,7 @@
         "    features (input): Can be 'all', 'anova' or 'extratrees'\n",
         "    \"\"\"\n",
         "    # Specify the pattern for your csv files\n",
-        "    csv_files = glob.glob('*.csv')  # Adjust the path as necessary\n",
+        "    csv_files = glob.glob('trial/*.csv')  # Adjust the path as necessary\n",
         "\n",
         "    # List comprehension to load all csv files into DataFrames\n",
         "    dataframes = [pd.read_csv(file) for file in csv_files]\n",
@@ -173,7 +180,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 84,
+      "execution_count": 10,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -592,7 +599,7 @@
               "[111 rows x 23 columns]"
             ]
           },
-          "execution_count": 84,
+          "execution_count": 10,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -604,7 +611,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 85,
+      "execution_count": 11,
       "metadata": {},
       "outputs": [
         {
@@ -647,7 +654,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 86,
+      "execution_count": 12,
       "metadata": {
         "id": "hxz4tLMBmrGs"
       },
@@ -666,7 +673,7 @@
               "Text(0.5, 23.52222222222222, 'Predicted label')"
             ]
           },
-          "execution_count": 86,
+          "execution_count": 12,
           "metadata": {},
           "output_type": "execute_result"
         },
@@ -703,7 +710,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 87,
+      "execution_count": 13,
       "metadata": {
         "id": "I9w_Ot90oiLd"
       },
@@ -731,23 +738,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 94,
+      "execution_count": null,
       "metadata": {
         "id": "8kkihgPgo9Q0"
       },
-      "outputs": [
-        {
-          "ename": "IndexError",
-          "evalue": "index 2 is out of bounds for axis 1 with size 2",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-            "Cell \u001b[1;32mIn[94], line 15\u001b[0m\n\u001b[0;32m     12\u001b[0m roc_auc \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mdict\u001b[39m()\n\u001b[0;32m     14\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(n_classes):\n\u001b[1;32m---> 15\u001b[0m     fpr[i], tpr[i], _ \u001b[38;5;241m=\u001b[39m roc_curve(y_test_binarized[:, i], \u001b[43my_pred_proba\u001b[49m\u001b[43m[\u001b[49m\u001b[43m:\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mi\u001b[49m\u001b[43m]\u001b[49m)\n\u001b[0;32m     16\u001b[0m     roc_auc[i] \u001b[38;5;241m=\u001b[39m auc(fpr[i], tpr[i])\n\u001b[0;32m     18\u001b[0m \u001b[38;5;66;03m# Plotting the ROC Curve\u001b[39;00m\n",
-            "\u001b[1;31mIndexError\u001b[0m: index 2 is out of bounds for axis 1 with size 2"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "n_classes = 5\n",
         "\n",
@@ -802,7 +797,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.11.3"
+      "version": "3.11.5"
     }
   },
   "nbformat": 4,
